[package]
name = "taskforceai-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for TaskForceAI"
authors = ["TaskForceAI"]
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
thiserror = "1.0"
futures-util = "0.3"
async-trait = "0.1"

[dev-dependencies]
mockito = "1.5"
tokio-test = "0.4"