[package]
name = "taskforceai-sdk"
version = "0.1.1"
edition = "2021"
description = "Rust SDK for TaskForceAI"
authors = ["TaskForceAI"]
license = "MIT"
repository = "https://github.com/ClayWarren/taskforceai-sdk-rust"
homepage = "https://taskforceai.chat"
documentation = "https://taskforceai.chat/docs/rust-sdk"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
thiserror = "1.0"
futures-util = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"

[dev-dependencies]
mockito = "1.5"
tokio-test = "0.4"
